--- a/CRM/webapp1/templates/home.html
+++ b/CRM/webapp1/templates/home.html
@@ -3,7 +3,50 @@
 {% comment %} {% block title %}Home{% endblock %} {% endcomment %}
 
 {% block content %}
+{% if messages %}
+{% for message in messages %}
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+    {{ message }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+{% endfor %}
+{% endif %}
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Address</th>
+        <th scope="col">City</th>
+        <th scope="col">State</th>
+        <th scope="col">Zipcode</th>
+        <th scope="col">Created at</th>
+      </tr>
+    </thead>
+    <tbody>
+     
+        {% if records %}
+{% for record in records %}
+<tr>
+    <td>{{record.id}}</td>
+        <td>{{record.first_name}}
+        {{record.last_name}}</td>
+        <td>{{record.email}}</td>
+        <td>{{record.phone_number}}
+        <td>{{record.address}}</td>
+        <td>{{record.city}}</td>
+        <td>{{record.state}}</td>
+        <td>{{record.zipcode}}</td>
+        <td>{{record.created_at}}</td>
+        
+</tr>
+{% endfor %}
 
-<h1>Hello</h1>
-
+{% endif %}
+      
+    </tbody>
+  </table>
+  
 {% endblock %}
