--- a/CRM/webapp1/templates/login.html
+++ b/CRM/webapp1/templates/login.html
@@ -12,6 +12,14 @@
                     <form method="post" action="">
                         
                         {% csrf_token %}
+                        {% if messages %}
+                        {% for message in messages %}
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                          </div>
+                        {% endfor %}
+                        {% endif %}
 
                         <div class="form-group">
                             <label for="username">Username</label>
