--- a/CRM/webapp1/templates/signup.html
+++ b/CRM/webapp1/templates/signup.html
@@ -11,6 +11,14 @@
                     <div class="card-body">
                         <form method="post" action="">
                             {% csrf_token %}
+                            {% if messages %}
+                            {% for message in messages %}
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                {{ message }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                              </div>
+                            {% endfor %}
+                            {% endif %}
                             <div class="form-group">
                                 <label for="username">Username</label>
                                 <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username">
