--- a/CRM/webapp1/templates/home.html
+++ b/CRM/webapp1/templates/home.html
@@ -11,26 +11,28 @@
   </div>
 {% endfor %}
 {% endif %}
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Name</th>
-        <th scope="col">Email</th>
-        <th scope="col">Phone</th>
-        <th scope="col">Address</th>
-        <th scope="col">City</th>
-        <th scope="col">State</th>
-        <th scope="col">Zipcode</th>
-        <th scope="col">Created at</th>
-      </tr>
-    </thead>
-    <tbody>
+</br>
+<div class="container">
+  <table class="table table-striped table-bordered table-hover">
+      <thead class="thead-dark">
+          <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Name</th>
+              <th scope="col">Email</th>
+              <th scope="col">Phone</th>
+              <th scope="col">Address</th>
+              <th scope="col">City</th>
+              <th scope="col">State</th>
+              <th scope="col">Zipcode</th>
+              <th scope="col">Created at</th>
+          </tr>
+      </thead>
+      <tbody>
      
         {% if records %}
 {% for record in records %}
 <tr>
-    <td>{{record.id}}</td>
+         <td> <a href="{% url 'record' record.id %}">{{record.id}}</a></td>
         <td>{{record.first_name}}
         {{record.last_name}}</td>
         <td>{{record.email}}</td>
