--- a/CRM/webapp1/templates/navbar.html
+++ b/CRM/webapp1/templates/navbar.html
@@ -21,6 +21,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'add_record' %}">Add record</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'signup' %}">Register</a>
                 </li>
 
