--- a/CRM/webapp1/templates/record.html
+++ b/CRM/webapp1/templates/record.html
@@ -25,6 +25,7 @@
 <div class="card-footer">
     <a href="{% url 'home' %}" class="btn btn-primary">Back</a>
     <a href="{% url 'delete_record' record.id %}" class="btn btn-danger">delete</a>
+    <a href="{% url 'update_record' record.id %}" class="btn btn-danger">Update</a>
 </div>
 </div>
 </div>
